--- a/charts/sampleapp/templates/service.yaml
+++ b/charts/sampleapp/templates/service.yaml
@@ -1,2 +1,14 @@
 apiVersion: v1
 kind: Service
+metadata:
+  name: sampleapp-service
+  labels:
+    app: sampleapp
+spec:
+  type: ClusterIP
+  selector:
+    app: sampleapp
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
