--- a/k8s/prometheus-grafana-values.yaml
+++ b/k8s/prometheus-grafana-values.yaml
@@ -1,2 +1,29 @@
+prometheus:
+  prometheusSpec:
+    serviceMonitorSelectorNilUsesHelmValues: false
+    retention: 7d
+    resources:
+      requests:
+        memory: 400Mi
+        cpu: 200m
+      limits:
+        memory: 1Gi
+        cpu: 500m
+    serviceMonitorSelector:
+      matchLabels:
+        release: prometheus
+
 grafana:
-  adminPassword: admin
+  adminUser: admin
+  adminPassword: admin123
+  service:
+    type: LoadBalancer
+  persistence:
+    enabled: true
+    size: 5Gi
+  dashboards:
+    default:
+      app-performance:
+        gnetId: 15760  # Example app performance dashboard
+        revision: 1
+        datasource: Prometheus
